--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ input[type="email"].error {
 }
 
 .btn.accent {
-  @apply bg-pink-500 hover:bg-pink-600 text-white;
+  @apply bg-orange-400 hover:bg-orange-500 text-white;
 }
 
 .btn.success {
